[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Options/Options.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Options/ControlSongPannel.gd" type="Script" id=2]
[ext_resource path="res://FonteMenu.tres" type="DynamicFont" id=4]
[ext_resource path="res://TitleFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://OptionsMenu.tres" type="DynamicFont" id=6]
[ext_resource path="res://FontAudio.tres" type="DynamicFont" id=7]
[ext_resource path="res://Styles/Themes/ButtonAudio.tres" type="StyleBox" id=8]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Options" type="CanvasLayer"]
pause_mode = 2
layer = 6
script = ExtResource( 1 )

[node name="Options" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Options"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.2, 0.207843, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -524.5
margin_top = -320.0
margin_right = 524.5
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/VBox"]
margin_left = 102.0
margin_right = 947.0
margin_bottom = 133.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.929412, 0.886275, 0.835294, 1 )
custom_colors/font_color_shadow = Color( 0.819608, 0.333333, 0.411765, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 5 )
text = "Configurações
"

[node name="HBox" type="HBoxContainer" parent="Options/VBox"]
margin_top = 137.0
margin_right = 1049.0
margin_bottom = 508.0
size_flags_vertical = 3

[node name="VBoxVideo" type="VBoxContainer" parent="Options/VBox/HBox"]
margin_right = 494.0
margin_bottom = 371.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Label" type="Label" parent="Options/VBox/HBox/VBoxVideo"]
margin_left = 164.0
margin_right = 329.0
margin_bottom = 69.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.929412, 0.886275, 0.835294, 1 )
custom_colors/font_color_shadow = Color( 0.819608, 0.333333, 0.411765, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 6 )
text = "
Video"

[node name="FullScreen" type="HBoxContainer" parent="Options/VBox/HBox/VBoxVideo"]
margin_top = 89.0
margin_right = 494.0
margin_bottom = 123.0

[node name="Label" type="Label" parent="Options/VBox/HBox/VBoxVideo/FullScreen"]
margin_right = 187.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "Tela Cheia"

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBox/HBox/VBoxVideo/FullScreen"]
margin_left = 191.0
margin_right = 494.0
margin_bottom = 34.0
size_flags_horizontal = 3
alignment = 2

[node name="CheckButton" type="CheckBox" parent="Options/VBox/HBox/VBoxVideo/FullScreen/HBoxContainer"]
margin_left = 279.0
margin_right = 303.0
margin_bottom = 34.0
size_flags_vertical = 3
custom_styles/focus = SubResource( 7 )

[node name="VSync" type="HBoxContainer" parent="Options/VBox/HBox/VBoxVideo"]
margin_top = 143.0
margin_right = 494.0
margin_bottom = 177.0

[node name="Label" type="Label" parent="Options/VBox/HBox/VBoxVideo/VSync"]
margin_right = 112.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "VSync"

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBox/HBox/VBoxVideo/VSync"]
margin_left = 116.0
margin_right = 494.0
margin_bottom = 34.0
size_flags_horizontal = 3
alignment = 2

[node name="CheckButton" type="CheckBox" parent="Options/VBox/HBox/VBoxVideo/VSync/HBoxContainer"]
margin_left = 354.0
margin_right = 378.0
margin_bottom = 34.0
size_flags_vertical = 3
custom_styles/focus = SubResource( 7 )

[node name="Separator" type="HBoxContainer" parent="Options/VBox/HBox"]
margin_left = 498.0
margin_right = 550.0
margin_bottom = 371.0

[node name="Label" type="Label" parent="Options/VBox/HBox/Separator"]
margin_top = 178.0
margin_right = 52.0
margin_bottom = 192.0
text = "             "

[node name="VBoxAudio" type="VBoxContainer" parent="Options/VBox/HBox"]
margin_left = 554.0
margin_right = 1049.0
margin_bottom = 371.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/VBox/HBox/VBoxAudio"]
margin_left = 165.0
margin_right = 330.0
margin_bottom = 69.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.929412, 0.886275, 0.835294, 1 )
custom_colors/font_color_shadow = Color( 0.819608, 0.333333, 0.411765, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 6 )
text = "
Audio"

[node name="Master" type="HBoxContainer" parent="Options/VBox/HBox/VBoxAudio"]
margin_top = 89.0
margin_right = 495.0
margin_bottom = 123.0

[node name="Master" type="Label" parent="Options/VBox/HBox/VBoxAudio/Master"]
margin_right = 301.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "Volume Principal"

[node name="HBoxMaster" type="HBoxContainer" parent="Options/VBox/HBox/VBoxAudio/Master"]
margin_left = 305.0
margin_right = 495.0
margin_bottom = 34.0
size_flags_horizontal = 3
alignment = 2

[node name="MasterMinus" type="Button" parent="Options/VBox/HBox/VBoxAudio/Master/HBoxMaster"]
margin_left = 84.0
margin_top = 9.0
margin_right = 100.0
margin_bottom = 25.0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "-"
__meta__ = {
"_editor_description_": ""
}

[node name="MasterVolume" type="Label" parent="Options/VBox/HBox/VBoxAudio/Master/HBoxMaster"]
margin_left = 104.0
margin_right = 170.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 6 )
text = "10"

[node name="MasterPlus" type="Button" parent="Options/VBox/HBox/VBoxAudio/Master/HBoxMaster"]
margin_left = 174.0
margin_top = 9.0
margin_right = 190.0
margin_bottom = 25.0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "+"
__meta__ = {
"_editor_description_": ""
}

[node name="Music" type="HBoxContainer" parent="Options/VBox/HBox/VBoxAudio"]
margin_top = 143.0
margin_right = 495.0
margin_bottom = 177.0

[node name="Music" type="Label" parent="Options/VBox/HBox/VBoxAudio/Music"]
margin_right = 313.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "Volume da Musica"

[node name="HBoxMusic" type="HBoxContainer" parent="Options/VBox/HBox/VBoxAudio/Music"]
margin_left = 317.0
margin_right = 495.0
margin_bottom = 34.0
size_flags_horizontal = 3
alignment = 2

[node name="MusicMinus" type="Button" parent="Options/VBox/HBox/VBoxAudio/Music/HBoxMusic"]
margin_left = 72.0
margin_top = 9.0
margin_right = 88.0
margin_bottom = 25.0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "-"
__meta__ = {
"_editor_description_": ""
}

[node name="MusicVolume" type="Label" parent="Options/VBox/HBox/VBoxAudio/Music/HBoxMusic"]
margin_left = 92.0
margin_right = 158.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 6 )
text = "10"

[node name="MusicPlus" type="Button" parent="Options/VBox/HBox/VBoxAudio/Music/HBoxMusic"]
margin_left = 162.0
margin_top = 9.0
margin_right = 178.0
margin_bottom = 25.0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "+"
__meta__ = {
"_editor_description_": ""
}

[node name="SFX" type="HBoxContainer" parent="Options/VBox/HBox/VBoxAudio"]
margin_top = 197.0
margin_right = 495.0
margin_bottom = 231.0

[node name="SFX" type="Label" parent="Options/VBox/HBox/VBoxAudio/SFX"]
margin_right = 344.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "Volume dos Efeitos"

[node name="HBoxSFX" type="HBoxContainer" parent="Options/VBox/HBox/VBoxAudio/SFX"]
margin_left = 348.0
margin_right = 495.0
margin_bottom = 34.0
size_flags_horizontal = 3
alignment = 2

[node name="SFXMinus" type="Button" parent="Options/VBox/HBox/VBoxAudio/SFX/HBoxSFX"]
margin_left = 41.0
margin_top = 9.0
margin_right = 57.0
margin_bottom = 25.0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "-"
__meta__ = {
"_editor_description_": ""
}

[node name="SFXVolume" type="Label" parent="Options/VBox/HBox/VBoxAudio/SFX/HBoxSFX"]
margin_left = 61.0
margin_right = 127.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 6 )
text = "10"

[node name="SFXPlus" type="Button" parent="Options/VBox/HBox/VBoxAudio/SFX/HBoxSFX"]
margin_left = 131.0
margin_top = 9.0
margin_right = 147.0
margin_bottom = 25.0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "+"
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxBack" type="HBoxContainer" parent="Options/VBox"]
margin_left = 427.0
margin_top = 512.0
margin_right = 622.0
margin_bottom = 640.0
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Options/VBox/HBoxBack"]
margin_right = 195.0
margin_bottom = 128.0

[node name="ApplyButton" type="Button" parent="Options/VBox/HBoxBack/VBoxContainer"]
margin_right = 195.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
text = "Aplicar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="Button" parent="Options/VBox/HBoxBack/VBoxContainer"]
margin_top = 44.0
margin_right = 195.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 4 )
text = "Controles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Options/VBox/HBoxBack/VBoxContainer"]
margin_top = 88.0
margin_right = 195.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 4 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Control" parent="Options"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Options/Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.207843, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Options/Controls"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -524.5
margin_top = -280.0
margin_right = 524.5
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/Controls/VBox"]
margin_left = 232.0
margin_right = 817.0
margin_bottom = 65.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.929412, 0.886275, 0.835294, 1 )
custom_colors/font_color_shadow = Color( 0.819608, 0.333333, 0.411765, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 5 )
text = "Controles"

[node name="HBox" type="HBoxContainer" parent="Options/Controls/VBox"]
margin_top = 69.0
margin_right = 1049.0
margin_bottom = 516.0
size_flags_vertical = 3

[node name="VBoxComands" type="VBoxContainer" parent="Options/Controls/VBox/HBox"]
margin_right = 199.0
margin_bottom = 447.0

[node name="Label" type="Label" parent="Options/Controls/VBox/HBox/VBoxComands"]
margin_right = 199.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 4 )
text = "
Move UP 
"

[node name="Label3" type="Label" parent="Options/Controls/VBox/HBox/VBoxComands"]
margin_top = 112.0
margin_right = 199.0
margin_bottom = 183.0
custom_fonts/font = ExtResource( 4 )
text = "Move Left
"

[node name="Label2" type="Label" parent="Options/Controls/VBox/HBox/VBoxComands"]
margin_top = 187.0
margin_right = 199.0
margin_bottom = 258.0
custom_fonts/font = ExtResource( 4 )
text = "Move Down
"

[node name="Label4" type="Label" parent="Options/Controls/VBox/HBox/VBoxComands"]
margin_top = 262.0
margin_right = 199.0
margin_bottom = 333.0
custom_fonts/font = ExtResource( 4 )
text = "Move Right
"

[node name="VBoxComandsKeys" type="VBoxContainer" parent="Options/Controls/VBox/HBox"]
margin_left = 203.0
margin_right = 534.0
margin_bottom = 447.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Options/Controls/VBox/HBox/VBoxComandsKeys"]
margin_right = 331.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 4 )
text = " 
 - W
"

[node name="Label3" type="Label" parent="Options/Controls/VBox/HBox/VBoxComandsKeys"]
margin_top = 112.0
margin_right = 331.0
margin_bottom = 183.0
custom_fonts/font = ExtResource( 4 )
text = " - A
"

[node name="Label2" type="Label" parent="Options/Controls/VBox/HBox/VBoxComandsKeys"]
margin_top = 187.0
margin_right = 331.0
margin_bottom = 258.0
custom_fonts/font = ExtResource( 4 )
text = " - S
"

[node name="Label4" type="Label" parent="Options/Controls/VBox/HBox/VBoxComandsKeys"]
margin_top = 262.0
margin_right = 331.0
margin_bottom = 333.0
custom_fonts/font = ExtResource( 4 )
text = " - D
"

[node name="VBoxComands 2" type="VBoxContainer" parent="Options/Controls/VBox/HBox"]
margin_left = 538.0
margin_right = 713.0
margin_bottom = 447.0

[node name="Label5" type="Label" parent="Options/Controls/VBox/HBox/VBoxComands 2"]
margin_right = 175.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 4 )
text = "
Interagir
"

[node name="Label7" type="Label" parent="Options/Controls/VBox/HBox/VBoxComands 2"]
margin_top = 112.0
margin_right = 175.0
margin_bottom = 183.0
custom_fonts/font = ExtResource( 4 )
text = "Pausar
"

[node name="Label6" type="Label" parent="Options/Controls/VBox/HBox/VBoxComands 2"]
margin_top = 187.0
margin_right = 175.0
margin_bottom = 258.0
custom_fonts/font = ExtResource( 4 )
text = "Ajuda
"

[node name="Label8" type="Label" parent="Options/Controls/VBox/HBox/VBoxComands 2"]
margin_top = 262.0
margin_right = 175.0
margin_bottom = 333.0
custom_fonts/font = ExtResource( 4 )
text = "Objetivo
"

[node name="VBoxComandsKeys 2" type="VBoxContainer" parent="Options/Controls/VBox/HBox"]
margin_left = 717.0
margin_right = 1049.0
margin_bottom = 447.0
size_flags_horizontal = 3

[node name="Label7" type="Label" parent="Options/Controls/VBox/HBox/VBoxComandsKeys 2"]
margin_right = 332.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 4 )
text = "
 - Space
"

[node name="Label9" type="Label" parent="Options/Controls/VBox/HBox/VBoxComandsKeys 2"]
margin_top = 112.0
margin_right = 332.0
margin_bottom = 183.0
custom_fonts/font = ExtResource( 4 )
text = " - Esc
"

[node name="Label8" type="Label" parent="Options/Controls/VBox/HBox/VBoxComandsKeys 2"]
margin_top = 187.0
margin_right = 332.0
margin_bottom = 258.0
custom_fonts/font = ExtResource( 4 )
text = " - H
"

[node name="Label10" type="Label" parent="Options/Controls/VBox/HBox/VBoxComandsKeys 2"]
margin_top = 262.0
margin_right = 332.0
margin_bottom = 333.0
custom_fonts/font = ExtResource( 4 )
text = " - O
"

[node name="HBoxBack" type="HBoxContainer" parent="Options/Controls/VBox"]
margin_left = 459.0
margin_top = 520.0
margin_right = 590.0
margin_bottom = 560.0
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Options/Controls/VBox/HBoxBack"]
margin_right = 131.0
margin_bottom = 40.0

[node name="BackControls" type="Button" parent="Options/Controls/VBox/HBoxBack/VBoxContainer"]
margin_right = 131.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Options/VBox/HBox/VBoxAudio/Master/HBoxMaster/MasterMinus" to="Options/VBox/HBox/VBoxAudio" method="_on_MasterMinus_pressed"]
[connection signal="pressed" from="Options/VBox/HBox/VBoxAudio/Master/HBoxMaster/MasterPlus" to="Options/VBox/HBox/VBoxAudio" method="_on_MasterPlus_pressed"]
[connection signal="pressed" from="Options/VBox/HBox/VBoxAudio/Music/HBoxMusic/MusicMinus" to="Options/VBox/HBox/VBoxAudio" method="_on_MusicMinus_pressed"]
[connection signal="pressed" from="Options/VBox/HBox/VBoxAudio/Music/HBoxMusic/MusicPlus" to="Options/VBox/HBox/VBoxAudio" method="_on_MusicPlus_pressed"]
[connection signal="pressed" from="Options/VBox/HBox/VBoxAudio/SFX/HBoxSFX/SFXMinus" to="Options/VBox/HBox/VBoxAudio" method="_on_SFXMinus_pressed"]
[connection signal="pressed" from="Options/VBox/HBox/VBoxAudio/SFX/HBoxSFX/SFXPlus" to="Options/VBox/HBox/VBoxAudio" method="_on_SFXPlus_pressed"]
[connection signal="mouse_entered" from="Options/VBox/HBoxBack/VBoxContainer/ApplyButton" to="." method="_on_ApplyButton_mouse_entered"]
[connection signal="pressed" from="Options/VBox/HBoxBack/VBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="mouse_entered" from="Options/VBox/HBoxBack/VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_mouse_entered"]
[connection signal="pressed" from="Options/VBox/HBoxBack/VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="mouse_entered" from="Options/VBox/HBoxBack/VBoxContainer/BackButton" to="." method="_on_BackButton_mouse_entered"]
[connection signal="pressed" from="Options/VBox/HBoxBack/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="mouse_entered" from="Options/Controls/VBox/HBoxBack/VBoxContainer/BackControls" to="." method="_on_BackControls_mouse_entered"]
[connection signal="pressed" from="Options/Controls/VBox/HBoxBack/VBoxContainer/BackControls" to="." method="_on_BackControls_pressed"]
